--- a/index/index.html
+++ b/index/index.html
@@ -13,9 +13,38 @@
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="stylesheet" href="index.css">
+
 </head>
 
 <body>
   <!-- your content here... -->
-  <h1>Hello World</h1>
+  <div class="coffee-animation">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <lottie-player src="https://assets5.lottiefiles.com/private_files/lf30_kr9rff8d.json"  background="transparent"  speed="1"  style="width: 800px; height: 800px;"  loop  autoplay></lottie-player>
+  </div>
+
+  <svg viewbox="0 0 100 50">
+    <defs>
+      <linearGradient id="gradient">
+        <stop color="#000"/>
+      </linearGradient>
+      <pattern id="wave" x="0" y="-0.5" width="125%" height="300%" patternUnits="userSpaceOnUse">
+        <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="url(#gradient)"> 
+          <animateTransform
+              attributeName="transform"
+              begin="0s"
+              dur="1.5s"
+              type="translate"
+              from="0,0"
+              to="40,0"
+              repeatCount="indefinite" />
+        </path>
+      </pattern>
+    </defs>
+    <text text-anchor="middle" x="50" y="15" font-size="17" fill="white" fill-opacity="0.1">A Cup of Tills</text>
+    <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#wave)"  fill-opacity="1">A Cup of Tills</text>
+  </svg>
+
+  
 </body>
