--- a/index/index.html
+++ b/index/index.html
@@ -19,18 +19,21 @@
 
 <body>
   <!-- your content here... -->
+
+  <!--COFFEE ANMIATION-->
   <div class="coffee-animation">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <lottie-player src="https://assets5.lottiefiles.com/private_files/lf30_kr9rff8d.json"  background="transparent"  speed="1"  style="width: 800px; height: 800px;"  loop  autoplay></lottie-player>
   </div>
 
-  <svg viewbox="0 0 100 50">
+  <!--WIGGLY TEXT-->
+  <svg viewbox="0 0 100 25">
     <defs>
       <linearGradient id="gradient">
-        <stop color="#000"/>
+        <stop color="#593D3B"/>
       </linearGradient>
-      <pattern id="wave" x="0" y="-0.5" width="125%" height="300%" patternUnits="userSpaceOnUse">
-        <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="url(#gradient)"> 
+      <pattern id="wave" x="0" y="-0.5" width="500%" height="300%" patternUnits="userSpaceOnUse">
+        <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="#692E05"> 
           <animateTransform
               attributeName="transform"
               begin="0s"
@@ -42,9 +45,8 @@
         </path>
       </pattern>
     </defs>
-    <text text-anchor="middle" x="50" y="15" font-size="17" fill="white" fill-opacity="0.1">A Cup of Tills</text>
-    <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#wave)"  fill-opacity="1">A Cup of Tills</text>
+    <text text-anchor="middle" x="50" y="15" font-size="15" fill="#D4C1B0" fill-opacity="1">A Cup of Tills</text>
+    <text text-anchor="middle" x="50" y="15" font-size="15" fill="url(#wave)"  fill-opacity="1">A Cup of Tills</text>
   </svg>
 
-  
 </body>
