added a top navigating bar

--- a/index/index.html
+++ b/index/index.html
@@ -20,6 +20,26 @@
 <body>
   <!-- your content here... -->
 
+<!--LOAD ICONS FOR NAV BAR-->
+
+
+  <!--STICKY NAV BAR-->
+<div id="navbar">
+  <div>
+    <a href="#Home">Home</a>
+  </div>
+  <div>
+    <a href="#About Me">About Me</a>
+  </div>
+  <div>
+    <a href="#Fashion">Fashion</a> 
+  </div>
+  <div>
+    
+    <a href="#Coffee">Coffee</a> 
+  </div>
+</div>
+
   <!--COFFEE ANMIATION-->
   <div class="coffee-animation">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -48,5 +68,5 @@
     <text text-anchor="middle" x="50" y="15" font-size="15" fill="#D4C1B0" fill-opacity="1">A Cup of Tills</text>
     <text text-anchor="middle" x="50" y="15" font-size="15" fill="url(#wave)"  fill-opacity="1">A Cup of Tills</text>
   </svg>
-
+  <script src="stickyNav.js"></script>
 </body>
