--- a/index/index.html
+++ b/index/index.html
@@ -2,18 +2,12 @@
 
 <html lang="en">
 <head>
-  
+  <title>Cup Of Tills</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="stylesheet" href="index.css">
+  <meta name="description" content="A question for a memory.">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Cup Of Tills</title>
-  <meta name="description" content="A question for a memory.">
-
-
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="stylesheet" href="index.css">
 
 </head>
 
@@ -21,8 +15,6 @@
   <!-- your content here... -->
 
 <!--LOAD ICONS FOR NAV BAR-->
-
-
   <!--STICKY NAV BAR-->
 <div id="navbar">
   <div>
