trying to implemnt text with a weird div nav bar problem

--- a/index/index.html
+++ b/index/index.html
@@ -5,6 +5,9 @@
   <title>Cup Of Tills</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link rel="stylesheet" href="index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300;1,700;1,900&display=swap" rel="stylesheet">
   <meta name="description" content="A question for a memory.">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -60,5 +63,9 @@
     <text text-anchor="middle" x="50" y="15" font-size="15" fill="#D4C1B0" fill-opacity="1">A Cup of Tills</text>
     <text text-anchor="middle" x="50" y="15" font-size="15" fill="url(#wave)"  fill-opacity="1">A Cup of Tills</text>
   </svg>
+  <div id= "About">
+    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
+  </div>
+  
   <script src="stickyNav.js"></script>
 </body>
