Stable version with socail icons to the left needs to shift right

--- a/index/index.html
+++ b/index/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>Cup Of Tills</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <!-- Add icon library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,10 +31,12 @@
   <div>
     <a href="#Fashion">Fashion</a> 
   </div>
-  <div>
-    
+  <div> 
     <a href="#Coffee">Coffee</a> 
   </div>
+   <!-- Add font awesome icons -->
+   <a href="#" class="fa fa-facebook"></a>
+   <a href="#" class="fa fa-twitter"></a>
 </div>
 
   <!--COFFEE ANMIATION-->
@@ -60,11 +64,12 @@
         </path>
       </pattern>
     </defs>
-    <text text-anchor="middle" x="50" y="15" font-size="15" fill="#D4C1B0" fill-opacity="1">A Cup of Tills</text>
-    <text text-anchor="middle" x="50" y="15" font-size="15" fill="url(#wave)"  fill-opacity="1">A Cup of Tills</text>
+    <text text-anchor="middle" x="50" y="15" font-size="15" fill="#D4C1B0" fill-opacity="1">cup of tills</text>
+    <text text-anchor="middle" x="50" y="15" font-size="15" fill="url(#wave)"  fill-opacity="1">cup of tills</text>
   </svg>
+  <div id = "box">&nbsp;</div> 
   <div id= "About">
-    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
+    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</h1>
   </div>
   
   <script src="stickyNav.js"></script>
