trying to fix the position of the tik tok button

--- a/index/index.html
+++ b/index/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <!-- Add icon library -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/32f4abf4e7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,8 +36,10 @@
     <a href="#Coffee">Coffee</a> 
   </div>
    <!-- Add font awesome icons -->
-   <a href="#" class="fa fa-facebook"></a>
-   <a href="#" class="fa fa-twitter"></a>
+  <div id = "social">
+    <a href="#" class="fa fa-instagram"></a>
+    <a href="#" class="fa-brands fa-tiktok fa-2xl"></a>
+  </div>
 </div>
 
   <!--COFFEE ANMIATION-->
