--- a/index/index.html
+++ b/index/index.html
@@ -37,8 +37,8 @@
   </div>
    <!-- Add font awesome icons -->
   <div id = "social">
-    <a href="#" class="fa fa-instagram"></a>
-    <a href="#" class="fa-brands fa-tiktok fa-2xl"></a>
+    <a href="https://www.instagram.com/taylor.donohue/" class="fa fa-instagram"></a>
+    <a href="https://www.tiktok.com/@taylor.donohue" class="fa-brands fa-tiktok fa-2xl"></a>
   </div>
 </div>
 
@@ -67,7 +67,7 @@
         </path>
       </pattern>
     </defs>
-    <text text-anchor="middle" x="50" y="15" font-size="15" fill="#D4C1B0" fill-opacity="1">cup of tills</text>
+    <text text-anchor="middle" x="50" y="15" font-size="15" fill="#FFFFFF" fill-opacity="1">cup of tills</text>
     <text text-anchor="middle" x="50" y="15" font-size="15" fill="url(#wave)"  fill-opacity="1">cup of tills</text>
   </svg>
   <div id = "box">&nbsp;</div> 
@@ -76,4 +76,16 @@
   </div>
   
   <script src="stickyNav.js"></script>
+<!--Mobile Detect Code-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
+<script>
+	var ua = new UAParser();
+	var result = ua.getResult();
+	console.log(result);
+
+
+	console.log(result.browser);
+	console.log(result.device);
+	console.log(result.os);
+</script>
 </body>
